REFACTOR: Se agregaron unitarias para llegar al 100% segun la nueva logica de api-gateway.